# bureaucrat

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  config.toml.example  justfile  pyproject.toml  rustfmt.toml
alembic/: env.py
alembic/versions/: 17e145179a5b_kibitz_extensions.py  1f84adc3c494_game_models.py  2311d84c3dd9_base_reminders_tables.py  58562efa9e2d_feedback_metrics_and_comment_types.py  6642068247b2_game_submodule_for_collective_reminder_.py  6671717ca2c6_feat_threads_managed_threads_and_.py  7d4746d006f0_fix_hard_reset_due_to_constraint_issues.py  831835a9ad34_game_submodule_for_collective_reminder_.py  8b828974262c_bigint_for_author_snowflake.py  8d1198bb424a_update.py  da1306c7a33a_feedback_metrics_and_comment_types.py  e6fd78f3042a_signups_distinct_from_participants.py
client/: package-lock.json  vite.config.js
src/: __main__.py  main.rs
src/bureaucrat/: __init__.py  admin.py  archives.py  auth.rs  configuration.rs  mod.rs  phases.py  reminders.py  seating.py  services.rs  threads.py
src/bureaucrat/discord/: administrative.rs  misc.rs  mod.rs  utils.rs
src/bureaucrat/discord/feedback/: mod.rs  submit.rs
src/bureaucrat/feedback/: __init__.py  list.py  new.py
src/bureaucrat/games/: __init__.py  categories.py  configure.py  kibitz.py  reminders.py  roles.py  signups.py  toplevel.py
src/bureaucrat/models/: __init__.py  archives.py  config.py  configure.py  feedback.py  feedback.rs  game.rs  games.py  mod.rs  reminders.py  scripts.py
src/bureaucrat/models/state/: __init__.py  moment.py  nominations.py  seating.py
src/bureaucrat/nominations/: __init__.py
src/bureaucrat/routes/: api.rs  app.rs  mod.rs
src/bureaucrat/scripts/: __init__.py  details.py  listing.py  new.py
src/bureaucrat/townsquare/: __init__.py
src/bureaucrat/utility/: __init__.py  aws.py  checks.py  embeds.py  logging.py
