[package]
name = "bureaucrat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
config = "0.13.4"
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
static_dir = "0.2.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "full"] }
warp = { version = "0.3.6", features = ["tls"] }
