[tool.poetry]
name = "bureaucrat"
version = "0.1.0"
description = ""
authors = ["Rohan Sarvaria <rsarvaria@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
scriptmaker = "^2"
sqids = "^0.4.1"
asyncpg = "^0.29.0"
ormar = "^0.20.0"
python-dotenv = "^1.0.1"
aioboto3 = "^12.3.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "2.5.3"
dotmap = "^1.3.30"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pylance = "^0.10.6"
black = "^24.3.0"

[tool.poetry.scripts]
bureaucrat = "src.__main__:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
